--- a/core/vm/stark/Cargo.toml
+++ b/core/vm/stark/Cargo.toml
@@ -9,6 +9,8 @@ crate-type = ["staticlib"]
 
 [dependencies]
 bincode = "1.3"
-hex = "0.4"
-risc0-zkvm = { version = "0.21", features = ["prove"] }
-hello-world-methods = { path = "methods" }
+risc0-zkvm = { version = "0.21" }
+hello-world-methods = { path = "methods", optional = true}
+
+[features]
+generate = ["dep:hello-world-methods", "risc0-zkvm/prove"]
