--- a/core/vm/stark/Cargo.toml
+++ b/core/vm/stark/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["staticlib"]
 
 [dependencies]
 bincode = "1.3"
-risc0-zkvm = { version = "0.21" }
+risc0-zkvm = { version = "0.21", default-features = false }
 hello-world-methods = { path = "methods", optional = true}
 
 [features]
